crates/tokmd-format/tests/snapshots/snapshot_coverage__lang_md_children_separate.snap
---
source: crates/tokmd-format/tests/snapshot_coverage.rs
assertion_line: 607
expression: "render_lang_md(&report, ChildrenMode::Separate)"
---
|Lang|Code|Lines|Bytes|Tokens|
|---|---:|---:|---:|---:|
|Rust|1000|1200|50000|2500|
|HTML (embedded)|200|240|10000|500|
|**Total**|1200|1440|60000|3000|
