crates/tokmd-format/tests/snapshots/snapshot_coverage__lang_md_empty_receipt.snap
---
source: crates/tokmd-format/tests/snapshot_coverage.rs
assertion_line: 475
expression: "render_lang_md(&report, ChildrenMode::Collapse)"
---
|Lang|Code|Lines|Bytes|Tokens|
|---|---:|---:|---:|---:|
|**Total**|0|0|0|0|
