crates/tokmd-format/tests/snapshots/snapshot_coverage__lang_md_twenty_rows.snap
---
source: crates/tokmd-format/tests/snapshot_coverage.rs
assertion_line: 292
expression: "render_lang_md(&report, ChildrenMode::Collapse)"
---
|Lang|Code|Lines|Bytes|Tokens|
|---|---:|---:|---:|---:|
|Rust|2000|2400|100000|5000|
|Python|1910|2292|95500|4775|
|JavaScript|1820|2184|91000|4550|
|TypeScript|1730|2076|86500|4325|
|Go|1640|1968|82000|4100|
|Java|1550|1860|77500|3875|
|C|1460|1752|73000|3650|
|C++|1370|1644|68500|3425|
|C#|1280|1536|64000|3200|
|Ruby|1190|1428|59500|2975|
|Kotlin|1100|1320|55000|2750|
|Swift|1010|1212|50500|2525|
|Haskell|920|1104|46000|2300|
|OCaml|830|996|41500|2075|
|Elixir|740|888|37000|1850|
|Lua|650|780|32500|1625|
|Shell|560|672|28000|1400|
|TOML|470|564|23500|1175|
|YAML|380|456|19000|950|
|JSON|290|348|14500|725|
|**Total**|22900|27480|1145000|57250|
