crates/tokmd-format/tests/snapshots/snapshot_coverage__lang_md_twenty_rows_with_files.snap
---
source: crates/tokmd-format/tests/snapshot_coverage.rs
assertion_line: 338
expression: output
---
|Lang|Code|Lines|Files|Bytes|Tokens|Avg|
|---|---:|---:|---:|---:|---:|---:|
|Rust|2000|2400|20|100000|5000|120|
|Python|1910|2292|19|95500|4775|120|
|JavaScript|1820|2184|18|91000|4550|121|
|TypeScript|1730|2076|17|86500|4325|122|
|Go|1640|1968|16|82000|4100|123|
|Java|1550|1860|15|77500|3875|124|
|C|1460|1752|14|73000|3650|125|
|C++|1370|1644|13|68500|3425|126|
|C#|1280|1536|12|64000|3200|128|
|Ruby|1190|1428|11|59500|2975|129|
|Kotlin|1100|1320|11|55000|2750|120|
|Swift|1010|1212|10|50500|2525|121|
|Haskell|920|1104|9|46000|2300|122|
|OCaml|830|996|8|41500|2075|124|
|Elixir|740|888|7|37000|1850|126|
|Lua|650|780|6|32500|1625|130|
|Shell|560|672|5|28000|1400|134|
|TOML|470|564|4|23500|1175|141|
|YAML|380|456|3|19000|950|152|
|JSON|290|348|2|14500|725|174|
|**Total**|22900|27480|220|1145000|57250|124|
