crates/tokmd-format/tests/snapshots/snapshot_coverage__lang_tsv_children_collapse.snap
---
source: crates/tokmd-format/tests/snapshot_coverage.rs
assertion_line: 623
expression: "render_lang_tsv(&report, ChildrenMode::Collapse)"
---
Lang	Code	Lines	Bytes	Tokens
Rust	1000	1200	50000	2500
HTML	200	240	10000	500
Total	1200	1440	60000	3000
