crates/tokmd-format/tests/snapshots/snapshot_coverage__lang_tsv_empty_receipt.snap
---
source: crates/tokmd-format/tests/snapshot_coverage.rs
assertion_line: 484
expression: "render_lang_tsv(&report, ChildrenMode::Collapse)"
---
Lang	Code	Lines	Bytes	Tokens
Total	0	0	0	0
